[package]
name = "ldk-dep-scanner"
version = "0.1.0"
edition = "2021"
description = "Scan rust-lightning dependents for std vs no-std usage"

[workspace]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive", "env"] }
base64 = "0.21"
toml = "0.7"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"
regex-lite = "0.1"
